--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="style.css">
 <body>
     <div class="map">
-            <img src="../images/map.png" border="0" usemap="#planetmap" alt="Planets" />
+            <img src="images/map.png" border="0" usemap="#planetmap" alt="Planets" />
         </div>
         <map name="planetmap" id="planetmap">
             <area shape="rect" coords="32,69,75,94" href ="http://www.baidu.com" target="_blank" alt="吉首市" />
